@@ -119,6 +119,7 @@ export(.mpfr, .mpfr.
        , "getPrec"
        , "hypot"
        , "integrateR"
+     , igamma # working iff MPFR version >= 3.2.0
        , "j0" , "j1" , "jn"
        , "mpfr"
        , mpfrIs0, .mpfr.is.whole # as substitutes of
