@@ -70,6 +70,7 @@ static R_CallMethodDef CallEntries[] = {
     CALLDEF(R_mpfr_is_zero, 1),      	CALLDEF(R_mpfr_is_zero_A, 1),
 
     CALLDEF(R_mpfr_atan2, 3),
+    CALLDEF(R_mpfr_igamma, 3),
     CALLDEF(R_mpfr_hypot, 3),
     CALLDEF(R_mpfr_beta, 3),
     CALLDEF(R_mpfr_lbeta, 3),
@@ -144,6 +145,7 @@ R_init_Rmpfr(DllInfo *dll)
     RREGDEF(R_mpfr_yn);
     RREGDEF(R_mpfr_atan2);
     RREGDEF(R_mpfr_hypot);
+    RREGDEF(R_mpfr_igamma);
     RREGDEF(R_mpfr_beta);
     RREGDEF(R_mpfr_lbeta);
     RREGDEF(R_mpfr_fac);
